.provarCaches/00D410000011HE0EAM/objects/rstk__socttc__c.object
<CustomObject>
    <description>socttc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socttc_soctt__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__socttc_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socttc_soctt__r.Name + &apos;-&apos; + TEXT(rstk__socttc_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_chgcomment__c</fullName>
        <label>Change Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_clause__c</fullName>
        <inlineHelpText>Required user-defined field, containing the textual content for this Clause.</inlineHelpText>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_currev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>System assigned Revision.  Revision is initialized to 1 on and add, and incremented as Contract Terms Template Clause records are modified.</inlineHelpText>
        <label>Current Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Clause can be deleted.  Note that once a Clause is in use, it cannot be deleted from Salesforce, but the &apos;Deleted&apos; checkbox will be set to checked (TRUE) and this Clause will no longer be able to be used going forward.</inlineHelpText>
        <label>Clause can be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Clause has been flagged as deleted and cannot be used going forward.</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_desc__c</fullName>
        <inlineHelpText>User-define alpha-numeric optional description up to 100 characters in length.</inlineHelpText>
        <label>Clause Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division for which this Contract Terms Template Clause applies.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Contract Terms Template Clauses</relationshipLabel>
        <relationshipName>socttcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows the editing of this Clause Content.</inlineHelpText>
        <label>Clause Content can be Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The date of the latest Revision.</inlineHelpText>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_seq__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_soctt__c</fullName>
        <inlineHelpText>The Contract Terms Template that this Claus is associated with.</inlineHelpText>
        <label>Contract Terms Template</label>
        <referenceTo>rstk__soctt__c</referenceTo>
        <relationshipLabel>Contract Terms Template Clauses</relationshipLabel>
        <relationshipName>socttcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socttc_title__c</fullName>
        <inlineHelpText>Required field, user-defined alpha numeric value up to 50 characters in length.</inlineHelpText>
        <label>Clause Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contract Terms Template Clause</label>
    <listViews>
        <fullName>rstk__RS_Contract_Terms_Template_Clauses</fullName>
        <columns>NAME</columns>
        <columns>rstk__socttc_div__c</columns>
        <columns>rstk__socttc_soctt__c</columns>
        <columns>rstk__socttc_title__c</columns>
        <columns>rstk__socttc_desc__c</columns>
        <columns>rstk__socttc_seq__c</columns>
        <columns>rstk__socttc_clause__c</columns>
        <columns>rstk__socttc_editable__c</columns>
        <columns>rstk__socttc_deletable__c</columns>
        <columns>rstk__socttc_deleted__c</columns>
        <columns>rstk__socttc_currev__c</columns>
        <columns>rstk__socttc_revdate__c</columns>
        <columns>rstk__socttc_chgcomment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Terms Template Clauses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Terms Template Clause</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Terms Template Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Clause_Content_Required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(rstk__socttc_clause__c) == 0</errorConditionFormula>
        <errorMessage>Clause Content Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Contract_Terms_Template_reqd_in_new_mode</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW(), ISBLANK(rstk__socttc_soctt__c) )</errorConditionFormula>
        <errorMessage>Contract Terms Template is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Contract_terms_must_belong_to_same_div</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__socttc_soctt__r.rstk__soctt_div__c != rstk__socttc_div__c</errorConditionFormula>
        <errorMessage>Contract Terms Template should belong to the same division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__socttc_div__c)</errorConditionFormula>
        <errorMessage>Sales Division is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sequence_Required_and_must_greater_than0</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(rstk__socttc_seq__c), rstk__socttc_seq__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Sequence is Required and must be Greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Title_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__socttc_title__c)</errorConditionFormula>
        <errorMessage>Clause Title is Required</errorMessage>
    </validationRules>
</CustomObject>